--- a/presentation/src/main/res/layout/fragment_card_repeat.xml
+++ b/presentation/src/main/res/layout/fragment_card_repeat.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/mainSide"
+        android:id="@+id/main_side_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/cardRepeat_hintSide_margin"
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toTopOf="@id/cardView" />
 
     <TextView
-        android:id="@+id/otherSide"
+        android:id="@+id/other_side_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/cardRepeat_hintSide_margin"
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="mainSide,otherSide"
+        app:constraint_referenced_ids="main_side_view,other_side_view"
         tools:layout_editor_absoluteY="74dp" />
 
     <TextView
