--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -29,7 +29,7 @@
     <dimen name="bottomSheet_editText_marginHorizontal">10dp</dimen>
     <dimen name="newCard_mainSide_marginTop">60dp</dimen>
     <dimen name="newCard_mainSide_marginBottom">40dp</dimen>
-    <dimen name="bottomSheet_editText_padding">7dp</dimen>
+    <dimen name="bottomSheet_editText_paddingVertical">7dp</dimen>
     <dimen name="bottomSheet_editText_textSize">22sp</dimen>
     <dimen name="newCard_reverseSize_marginBottom">20dp</dimen>
     <dimen name="newCard_chipGroup_marginHorizontal">40dp</dimen>
@@ -39,4 +39,6 @@
     <dimen name="bottomSheet_saveButton_corner_radius">5dp</dimen>
     <dimen name="newGroup_editText_marginTop">20dp</dimen>
     <dimen name="bottomSheet_saveButton_marginVertical">20dp</dimen>
+    <dimen name="progressbar_elevation">10dp</dimen>
+    <dimen name="bottomSheet_editText_paddingHorizontal">20dp</dimen>
 </resources>
