--- a/presentation/src/main/res/layout/fragment_card.xml
+++ b/presentation/src/main/res/layout/fragment_card.xml
@@ -3,9 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?backgroundPanelColor"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/bottom_sheet_background"
     android:gravity="center_horizontal|bottom"
     android:orientation="vertical">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|top"
+        android:layout_marginTop="@dimen/bottomSheet_upperLine_marginTop"
+        android:src="@drawable/line" />
 
     <EditText
         android:id="@+id/wordView"
@@ -15,11 +23,13 @@
         android:layout_marginTop="@dimen/newCard_mainSide_marginTop"
         android:layout_marginBottom="@dimen/newCard_mainSide_marginBottom"
         android:background="@drawable/input_background"
+        android:drawableStart="@drawable/card"
+        android:drawablePadding="@dimen/editText_drawable_padding"
         android:ems="10"
         android:hint="@string/main_side"
         android:inputType="textPersonName"
-        android:padding="@dimen/bottomSheet_editText_paddingVertical"
-        android:textAlignment="center"
+        android:paddingHorizontal="@dimen/bottomSheet_editText_paddingHorizontal"
+        android:paddingVertical="@dimen/bottomSheet_editText_paddingVertical"
         android:textColor="@color/black"
         android:textSize="@dimen/bottomSheet_editText_textSize">
 
@@ -33,19 +43,21 @@
         android:layout_marginHorizontal="@dimen/bottomSheet_editText_marginHorizontal"
         android:layout_marginBottom="@dimen/newCard_reverseSize_marginBottom"
         android:background="@drawable/input_background"
+        android:drawableStart="@drawable/card"
+        android:drawablePadding="@dimen/editText_drawable_padding"
         android:ems="10"
         android:hint="@string/reverse_side"
         android:inputType="textMultiLine"
         android:maxLines="4"
-        android:padding="@dimen/bottomSheet_editText_paddingVertical"
-        android:textAlignment="center"
+        android:paddingHorizontal="@dimen/bottomSheet_editText_paddingHorizontal"
+        android:paddingVertical="@dimen/bottomSheet_editText_paddingVertical"
         android:textColor="@color/black"
         android:textSize="@dimen/bottomSheet_editText_textSize" />
 
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/newCard_chipGroup_marginHorizontal"
+        android:layout_marginHorizontal="@dimen/bottomSheet_editText_marginHorizontal"
         android:layout_marginBottom="@dimen/newCard_chipGroup_marginBottom"
         android:background="@android:color/transparent"
         android:fadeScrollbars="true">
@@ -55,9 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@android:color/transparent"
-            app:singleLine="true">
-
-        </com.google.android.material.chip.ChipGroup>
+            app:singleLine="true" />
     </HorizontalScrollView>
 
 
