--- a/presentation/src/main/res/layout/fragment_cards.xml
+++ b/presentation/src/main/res/layout/fragment_cards.xml
@@ -10,7 +10,9 @@
         android:id="@+id/cardsView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/rv_marginTop"
+        android:layout_marginBottom="@dimen/rv_marginBottom"
+        android:clipToPadding="false"
+        android:paddingVertical="@dimen/rv_paddingVertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@id/backPanel"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/bottomPanel_create_margin"
-        android:background="?colorBackgroundBottomAppBar"
+        android:background="@drawable/create_button_background"
         android:padding="@dimen/bottomPanel_create_padding"
         android:src="@drawable/ic_create"
         android:stateListAnimator="@animator/button_animator"
