--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="blue_900">#004972</color>
     <color name="blue_gray_400">#76acc9</color>
     <color name="blue_gray_200">#A7C4D9</color>
+    <color name="gray_100">#F7F7F7</color>
     <color name="gray_200">#cccccc</color>
     <color name="green_400">#7FC98F</color>
     <color name="red_300">#F83C2E</color>
