--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -3,6 +3,8 @@
     <dimen name="translateView_textSize">20sp</dimen>
     <dimen name="translateView_marginTop">10dp</dimen>
     <dimen name="cardsItem_textSize">20sp</dimen>
+    <dimen name="rv_marginBottom">-15sp</dimen>
+    <dimen name="rv_paddingVertical">15sp</dimen>
     <dimen name="rvItem_padding">10dp</dimen>
     <dimen name="standart_elevation">4dp</dimen>
     <dimen name="toolbar_paddingTop">30dp</dimen>
@@ -20,28 +22,34 @@
     <dimen name="repeatCard_knowButton_minWidth">120dp</dimen>
     <dimen name="repeatCard_noCardView_elevation">8dp</dimen>
     <dimen name="repeatCard_noCardView_textSize">34sp</dimen>
-    <dimen name="rv_marginTop">20dp</dimen>
     <dimen name="bottomPanel_startRepeatButton_margin">10dp</dimen>
     <dimen name="bottomPanel_startRepeatButton_padding">10dp</dimen>
     <dimen name="bottomPanel_startRepeatButton_cornerRadius">10dp</dimen>
     <dimen name="bottomPanel_create_margin">20dp</dimen>
     <dimen name="bottomPanel_create_padding">5dp</dimen>
     <dimen name="bottomSheet_editText_marginHorizontal">10dp</dimen>
-    <dimen name="newCard_mainSide_marginTop">60dp</dimen>
+    <dimen name="newCard_mainSide_marginTop">30dp</dimen>
     <dimen name="newCard_mainSide_marginBottom">40dp</dimen>
     <dimen name="bottomSheet_editText_paddingVertical">7dp</dimen>
     <dimen name="bottomSheet_editText_textSize">20sp</dimen>
     <dimen name="newCard_reverseSize_marginBottom">20dp</dimen>
-    <dimen name="newCard_chipGroup_marginBottom">60dp</dimen>
+    <dimen name="newCard_chipGroup_marginBottom">10dp</dimen>
     <dimen name="bottomSheet_saveButton_marginEnd">24dp</dimen>
-    <dimen name="bottomSheet_saveButton_padding">10dp</dimen>
+    <dimen name="bottomSheet_saveButton_paddingHorizontal">10dp</dimen>
     <dimen name="bottomSheet_saveButton_corner_radius">5dp</dimen>
+    <dimen name="bottomSheet_corner_radius">15dp</dimen>
     <dimen name="newGroup_editText_marginTop">20dp</dimen>
-    <dimen name="bottomSheet_saveButton_marginVertical">20dp</dimen>
+    <dimen name="bottomSheet_saveButton_marginBottom">20dp</dimen>
     <dimen name="progressbar_elevation">10dp</dimen>
     <dimen name="bottomSheet_editText_paddingHorizontal">15dp</dimen>
     <dimen name="bottomSheet_editText_marginTop">20dp</dimen>
     <dimen name="editText_drawable_padding">10dp</dimen>
     <dimen name="bottomSheet_upperLine_marginTop">20dp</dimen>
     <dimen name="chip_radius">5dp</dimen>
+    <dimen name="newCard_chipGroup_minHeight">50dp</dimen>
+    <dimen name="editText_border_width">1dp</dimen>
+    <dimen name="editText_border_radius">5dp</dimen>
+    <dimen name="bottomBar_background_radius">15dp</dimen>
+    <dimen name="createButton_background_radius">10dp</dimen>
+
 </resources>
