--- a/presentation/src/main/res/drawable/input_background.xml
+++ b/presentation/src/main/res/drawable/input_background.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
-    android:tint="@color/white">
-    <corners android:radius="10dp" />
-
+    android:shape="rectangle">
+    <corners android:radius="@dimen/editText_border_radius" />
+    <solid android:color="@color/white"/>
+    <stroke
+        android:color="?colorSecondaryVariant"
+        android:width="@dimen/editText_border_width" />
 </shape>
