--- a/presentation/src/main/res/drawable/rect_round_up_corners_background.xml
+++ b/presentation/src/main/res/drawable/rect_round_up_corners_background.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <solid android:color="?attr/colorBackgroundBottomAppBar" />
     <corners
-        android:topLeftRadius="15dp"
-        android:topRightRadius="15dp" />
+        android:topLeftRadius="@dimen/bottomBar_background_radius"
+        android:topRightRadius="@dimen/bottomBar_background_radius" />
 </shape>
