select image from webview

--- a/presentation/src/main/res/navigation/nav_graph.xml
+++ b/presentation/src/main/res/navigation/nav_graph.xml
@@ -113,12 +113,12 @@
                 app:argType="long" />
         </action>
     </fragment>
-    <fragment
+    <dialog
         android:id="@+id/webViewFragment"
         android:name="com.example.ruen.views.WebViewFragment"
         android:label="WebViewFragment" >
         <argument
             android:name="url"
             app:argType="string" />
-    </fragment>
+    </dialog>
 </navigation>
