--- a/presentation/src/main/res/layout/fragment_card.xml
+++ b/presentation/src/main/res/layout/fragment_card.xml
@@ -69,6 +69,15 @@
     </HorizontalScrollView>
 
 
+    <Button
+        android:id="@+id/selectImageView"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/bottomSheet_button_selectImage_marginBottom"
+        android:text="@string/image"
+        app:icon="@drawable/ic_baseline_add_24" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/saveView"
         android:layout_width="match_parent"
