--- a/presentation/src/main/res/values/themes.xml
+++ b/presentation/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Ruen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Ruen" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blue_300</item>
         <item name="colorPrimaryVariant">@color/gray_200</item>
@@ -23,10 +23,11 @@
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
         <!-- Customize your theme here. -->
         <item name="backgroundPanelColor">@color/gray_100</item>
+        <item name="bottomSheetDialogTheme">@style/BottomSheetModal</item>
     </style>
 
 
-    <style name="Theme.Ruen.Cornflower" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Ruen.Cornflower" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blue_300</item>
         <item name="colorPrimaryVariant">@color/gray_200</item>
