исправлен баг с подсчетом времени следующего повторения

--- a/presentation/src/main/res/layout/fragment_card_repeat.xml
+++ b/presentation/src/main/res/layout/fragment_card_repeat.xml
@@ -176,17 +176,19 @@
         app:layout_constraintStart_toStartOf="@+id/cardView"
         app:layout_constraintTop_toBottomOf="@id/cardView" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:background="@color/transparent_white"
-        android:layout_width="0dp"
-        android:src="@drawable/ic_baseline_image_24"
-        android:layout_height="0dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:background="@color/transparent_white"
+            android:src="@drawable/ic_baseline_image_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="gone"
+            tools:visibility="visible"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/testpic" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
