--- a/presentation/src/main/res/layout/fragment_card.xml
+++ b/presentation/src/main/res/layout/fragment_card.xml
@@ -25,7 +25,7 @@
         android:drawablePadding="@dimen/editText_drawable_padding"
         android:ems="10"
         android:hint="@string/main_side"
-        android:inputType="textPersonName"
+        android:inputType="textCapSentences"
         android:paddingHorizontal="@dimen/bottomSheet_editText_paddingHorizontal"
         android:paddingVertical="@dimen/bottomSheet_editText_paddingVertical"
         android:textColor="@color/black"
@@ -44,7 +44,7 @@
         android:drawablePadding="@dimen/editText_drawable_padding"
         android:ems="10"
         android:hint="@string/reverse_side"
-        android:inputType="textMultiLine"
+        android:inputType="textMultiLine|textCapSentences"
         android:maxLines="4"
         android:paddingHorizontal="@dimen/bottomSheet_editText_paddingHorizontal"
         android:paddingVertical="@dimen/bottomSheet_editText_paddingVertical"
