--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="blue_gray_200">#A7C4D9</color>
     <color name="gray_100">#F7F7F7</color>
     <color name="gray_200">#cccccc</color>
+    <color name="gray_400">#9C9C9C</color>
     <color name="green_400">#7FC98F</color>
     <color name="red_300">#F83C2E</color>
     <color name="red_pink_700">#C63D33</color>
