--- a/presentation/src/main/res/values-night/themes.xml
+++ b/presentation/src/main/res/values-night/themes.xml
@@ -3,13 +3,14 @@
     <style name="Theme.Ruen" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blue_300</item>
-        <item name="colorPrimaryVariant">@color/gray_200</item>
+        <item name="colorPrimaryVariant">@color/gray_100</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/blue_700</item>
         <item name="colorSecondaryVariant">@color/blue_gray_400</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="colorSurface">@color/blue_700</item>
+        <item name="colorOnSurface">@color/white</item>
         <item name="android:windowBackground">@color/blue_900</item>
         // toolbar
         <item name="colorBackgroundToolbar">@color/blue_900</item>
