--- a/presentation/src/main/res/layout/fragment_card.xml
+++ b/presentation/src/main/res/layout/fragment_card.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@drawable/bottom_sheet_background"
     android:layout_height="wrap_content"
+    android:background="@drawable/bottom_sheet_background"
     android:gravity="center_horizontal|bottom"
     android:orientation="vertical">
 
@@ -14,15 +14,25 @@
         android:layout_marginTop="@dimen/bottomSheet_upperLine_marginTop"
         android:src="@drawable/line" />
 
+    <Spinner
+        android:id="@+id/groupView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/bottomSheet_editText_marginHorizontal"
+        android:layout_marginVertical="40dp"
+        android:background="@drawable/input_background"
+        android:minHeight="@dimen/card_groupView_minHeight"
+        android:spinnerMode="dropdown"
+        android:textColor="@color/black"
+        android:textSize="@dimen/bottomSheet_editText_textSize" />
+
     <EditText
         android:id="@+id/wordView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/bottomSheet_editText_marginHorizontal"
-        android:layout_marginTop="@dimen/newCard_mainSide_marginTop"
         android:layout_marginBottom="@dimen/newCard_mainSide_marginBottom"
         android:background="@drawable/input_background"
-        android:drawablePadding="@dimen/editText_drawable_padding"
         android:ems="10"
         android:hint="@string/main_side"
         android:inputType="textCapSentences"
@@ -41,7 +51,6 @@
         android:layout_marginHorizontal="@dimen/bottomSheet_editText_marginHorizontal"
         android:layout_marginBottom="@dimen/newCard_reverseSize_marginBottom"
         android:background="@drawable/input_background"
-        android:drawablePadding="@dimen/editText_drawable_padding"
         android:ems="10"
         android:hint="@string/reverse_side"
         android:inputType="textMultiLine|textCapSentences"
@@ -54,10 +63,10 @@
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="@dimen/newCard_chipGroup_minHeight"
         android:layout_marginHorizontal="@dimen/bottomSheet_editText_marginHorizontal"
         android:layout_marginBottom="@dimen/newCard_chipGroup_marginBottom"
         android:background="@android:color/transparent"
+        android:minHeight="@dimen/newCard_chipGroup_minHeight"
         android:scrollbars="none">
 
         <com.google.android.material.chip.ChipGroup
